[package]
name = "lle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustfft = "^6.1"
rayon = "*"
typed-builder="^0.16"

[dev-dependencies]
jkplot = { git = "https://github.com/TsuITOAR/jkplot" }
function_name = "*"
