[package]
name = "lle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustfft = "^6.2"
typed-builder = "^0.20"

[dev-dependencies]
jkplot = { git = "https://github.com/TsuITOAR/jkplot" }
function_name = "^0.3"
criterion = "^0.5"
rand = "^0.8"

[[bench]]
name = "linear_bench"
harness = false

[[bench]]
name = "nonlin_bench"
harness = false

[lib]
bench = false