[package]
name = "lle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["puffin"]
puffin = ["dep:puffin"]
par = []

[dependencies]
iterator_ilp = "2.1.2"
rustfft = "^6.2"
num-complex = { version = "^0.4", features = ["serde"] }
typed-builder = "^0.20"
serde = { version = "^1.0", features = ["derive"] }
rayon = { version = "1.10.0" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
puffin = { version = "^0.19", git = "https://github.com/tedsteen/puffin.git", rev = "11771eb", features = [
    "packing",
], optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
puffin = { version = "^0.19", git = "https://github.com/tedsteen/puffin.git", rev = "11771eb", features = [
    "packing",
    "web",
], optional = true }


[dev-dependencies]
jkplot = { git = "https://github.com/TsuITOAR/jkplot" }
function_name = "^0.3"
criterion = "^0.5"
rand = "^0.8"

[[bench]]
name = "linear_bench"
harness = false

[[bench]]
name = "nonlin_bench"
harness = false

[[bench]]
name = "iterator_linear"
harness = false

[lib]
bench = false
